--- a/analiza.ipynb
+++ b/analiza.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "787f1d3b",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
     "%pip install ipywidgets\n",
     "import ipywidgets as widgets\n",
     "disertacije_lj = pd.read_csv(\"disertacije_lj.csv\", delimiter=\"|\", index_col=\"ID\")\n",
-    "disertacije_mb = pd.read_csv(\"disertacije_mb.csv\", delimiter=\"|\", index_col=\"ID\")"
+    "disertacije_mb = pd.read_csv(\"disertacije_mb.csv\", delimiter=\"|\", index_col=\"ID\")\n"
    ]
   },
   {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6477d9f8",
    "metadata": {},
    "outputs": [
@@ -92,12 +92,12 @@
     }
    ],
    "source": [
-    "disertacije_lj.count()"
+    "disertacije_lj.count()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a1fe186c",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
     }
    ],
    "source": [
-    "disertacije_mb.count()"
+    "disertacije_mb.count()\n"
    ]
   },
   {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "69ddfbec",
    "metadata": {},
    "outputs": [
@@ -432,12 +432,12 @@
    "source": [
     "disertacije_lj['Dolžina naslova'] = disertacije_lj['Naslov'].str.len()\n",
     "najkrajši_lj = disertacije_lj.sort_values('Dolžina naslova')\n",
-    "najkrajši_lj.head(10)"
+    "najkrajši_lj.head(10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2e8c1efb",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
     }
    ],
    "source": [
-    "najkrajši_lj.plot.scatter(x='Dolžina naslova', y='Ogledi')"
+    "najkrajši_lj.plot.scatter(x='Dolžina naslova', y='Ogledi')\n"
    ]
   },
   {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f0c6766c",
    "metadata": {},
    "outputs": [
@@ -980,12 +980,12 @@
     }
    ],
    "source": [
-    "najkrajši_lj.tail(20)"
+    "najkrajši_lj.tail(20)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4c7c4cce",
    "metadata": {},
    "outputs": [
@@ -1280,7 +1280,7 @@
    ],
    "source": [
     "najbolj_ogledani_lj = disertacije_lj.sort_values('Ogledi', ascending=False)\n",
-    "najbolj_ogledani_lj.head(10)"
+    "najbolj_ogledani_lj.head(10)\n"
    ]
   },
   {
@@ -1610,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "86692f7f",
    "metadata": {},
    "outputs": [
@@ -1631,7 +1631,7 @@
     "plt.xlabel(\"Število ogledov\")\n",
     "plt.ylabel(\"Število prenosov\")\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -1646,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "24df285c",
    "metadata": {},
    "outputs": [
@@ -1669,12 +1669,12 @@
     }
    ],
    "source": [
-    "disertacije_mb.groupby(\"Jezik\")[\"Jezik\"].count().sort_values(ascending=False).head(10)"
+    "disertacije_mb.groupby(\"Jezik\")[\"Jezik\"].count().sort_values(ascending=False).head(10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "8692e32c",
    "metadata": {},
    "outputs": [
@@ -1697,12 +1697,12 @@
     }
    ],
    "source": [
-    "disertacije_lj.groupby(\"Jezik\")[\"Jezik\"].count().sort_values(ascending=False).head(10)"
+    "disertacije_lj.groupby(\"Jezik\")[\"Jezik\"].count().sort_values(ascending=False).head(10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "51dd256e",
    "metadata": {},
    "outputs": [
@@ -1735,7 +1735,7 @@
     "plt.ylabel(\"Delež angleških disertacij\")\n",
     "plt.xlabel(\"Leto\")\n",
     "plt.title(\"Delež angleških disertacij po letih\")\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n"
    ]
   },
   {
@@ -1748,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "a0737e16",
    "metadata": {},
    "outputs": [
@@ -1787,7 +1787,7 @@
     "razpredelnica = pd.DataFrame(data=leta_jezik_maribor)\n",
     "razpredelnica.plot.bar(x='leta', y='Delež angleških')\n",
     "plt.ylabel(\"Delež angleških disertacij\")\n",
-    "plt.title(\"Delež angleških disertacij po letih\")"
+    "plt.title(\"Delež angleških disertacij po letih\")\n"
    ]
   },
   {
@@ -1835,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "73ac4273",
    "metadata": {},
    "outputs": [
@@ -1855,7 +1855,7 @@
     "disertacije_organizacije_mb.plot.barh(figsize=(8, 10))\n",
     "plt.title(\"Število disertacij po organizaciji (Maribor)\")\n",
     "plt.xlabel(\"Število disertacij\")\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -1870,7 +1870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "15c4ce53",
    "metadata": {},
    "outputs": [
@@ -1905,12 +1905,12 @@
     "velike_lj = disertacije_lj[disertacije_lj[\"Organizacija\"].isin(velike_organizacije_lj)]\n",
     "velike_mb = disertacije_mb[disertacije_mb[\"Organizacija\"].isin(velike_organizacije_mb)]\n",
     "\n",
-    "velike_lj.count()"
+    "velike_lj.count()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "d6d12704",
    "metadata": {},
    "outputs": [
@@ -1936,7 +1936,7 @@
     }
    ],
    "source": [
-    "velike_mb.count()"
+    "velike_mb.count()\n"
    ]
   },
   {
@@ -1949,7 +1949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "efb7206b",
    "metadata": {},
    "outputs": [
@@ -1980,9 +1980,9 @@
     "deleži = dict()\n",
     "\n",
     "for org in velike_organizacije_lj:\n",
-    "    slo_count = len(slovenske_angleske_lj[(slovenske_angleske_lj[\"Jezik\"] == \"Slovenski jezik\") & \n",
+    "    slo_count = len(slovenske_angleske_lj[(slovenske_angleske_lj[\"Jezik\"] == \"Slovenski jezik\") &\n",
     "                                          (slovenske_angleske_lj[\"Organizacija\"] == org)])\n",
-    "    eng_count = len(slovenske_angleske_lj[(slovenske_angleske_lj[\"Jezik\"] == \"Angleški jezik\") & \n",
+    "    eng_count = len(slovenske_angleske_lj[(slovenske_angleske_lj[\"Jezik\"] == \"Angleški jezik\") &\n",
     "                                          (slovenske_angleske_lj[\"Organizacija\"] == org)])\n",
     "    total = slo_count + eng_count\n",
     "    if total > 0:\n",
@@ -2001,7 +2001,7 @@
     "jezik_org = deleži_df.plot.bar(x='Organizacija', y='Delež angleških')\n",
     "plt.xlabel(\"Organizacija\")\n",
     "plt.ylabel(\"Delež angleških disertacij\")\n",
-    "plt.title(\"Delež angleških disertacij po organizacijah (Ljubljana)\")"
+    "plt.title(\"Delež angleških disertacij po organizacijah (Ljubljana)\")\n"
    ]
   },
   {
@@ -2014,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "af4723ff",
    "metadata": {},
    "outputs": [
@@ -2029,7 +2029,7 @@
    ],
    "source": [
     "print(deleži[\"FMF - Fakulteta za matematiko in fiziko\"])\n",
-    "print(deleži[\"MF - Medicinska fakulteta\"])"
+    "print(deleži[\"MF - Medicinska fakulteta\"])\n"
    ]
   },
   {
@@ -2044,7 +2044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "fd2f182f",
    "metadata": {},
    "outputs": [
@@ -2114,8 +2114,7 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
-    "widgets.interact(nariši_graf, leto = widgets.IntSlider(min=2006, max=2024, step=1, value=2006))\n",
-    "\n"
+    "widgets.interact(nariši_graf, leto = widgets.IntSlider(min=2006, max=2024, step=1, value=2006))\n"
    ]
   },
   {
@@ -2411,7 +2410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "ad8b79bf",
    "metadata": {},
    "outputs": [
@@ -2439,7 +2438,7 @@
    "source": [
     "mentorji.groupby(\"Število disertacij\")[\"Mentor\"].count().sort_index().plot.bar()\n",
     "plt.ylabel(\"Število mentorjev\")\n",
-    "plt.title(\"Število mentorjev glede na število disertacij\")"
+    "plt.title(\"Število mentorjev glede na število disertacij\")\n"
    ]
   },
   {
@@ -2488,7 +2487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "3281bfb2",
    "metadata": {},
    "outputs": [
@@ -2516,7 +2515,7 @@
    "source": [
     "mb_kljucne.groupby([\"Število ključnih besed\"])[\"Število ključnih besed\"].count().sort_index().plot.bar()\n",
     "plt.title(\"Število disertacij glede na število ključnih besed za Univerzo v Mariboru\")\n",
-    "plt.ylabel(\"Število disertacij\")"
+    "plt.ylabel(\"Število disertacij\")\n"
    ]
   },
   {
@@ -2529,7 +2528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "9a64ffb9",
    "metadata": {},
    "outputs": [
@@ -2545,12 +2544,12 @@
     "lj_povprečje = lj_kljucne[\"Število ključnih besed\"].mean()\n",
     "mb_povprečje = mb_kljucne[\"Število ključnih besed\"].mean()\n",
     "\n",
-    "print(lj_povprečje, mb_povprečje)"
+    "print(lj_povprečje, mb_povprečje)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "2b52b9c5",
    "metadata": {},
    "outputs": [
@@ -2631,7 +2630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "b5ac0198",
    "metadata": {},
    "outputs": [
@@ -2658,7 +2657,7 @@
     "dolzine.plot.scatter(x=\"Dolžina naslova\", y=\"Dolžina glavnega dela\")\n",
     "plt.title(\"Povezava med dolžino naslova in dolžino glavnega dela\")\n",
     "korelacija = dolzine[\"Dolžina naslova\"].corr(dolzine[\"Dolžina glavnega dela\"])\n",
-    "print(korelacija)"
+    "print(korelacija)\n"
    ]
   },
   {
@@ -2671,7 +2670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "07d3f6eb",
    "metadata": {},
    "outputs": [
@@ -2965,7 +2964,7 @@
     }
    ],
    "source": [
-    "disertacije_lj.sort_values(by=\"Dolžina glavnega dela\", ascending=False).head(10)"
+    "disertacije_lj.sort_values(by=\"Dolžina glavnega dela\", ascending=False).head(10)\n"
    ]
   },
   {
